// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Empty TestComponent snapshot 1`] = `
<p
  style={
    Object {
      "color": undefined,
    }
  }
>
  <span>
    i am ninja
  </span>
</p>
`;

exports[`TestComponent with text & color snapshot 1`] = `
<p
  style={
    Object {
      "color": "rebeccapurple",
    }
  }
>
  Bob Ross is awesome
  <span>
    i am ninja
  </span>
</p>
`;

exports[`TestComponent with text snapshot 1`] = `
<p
  style={
    Object {
      "color": undefined,
    }
  }
>
  Blah blah blah!!
  <span>
    i am ninja
  </span>
</p>
`;
